<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_marginLeft="50dip"
    android:layout_marginRight="50dip"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/my_nanodegree_apps_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/button_padding"
        android:layout_marginBottom="@dimen/button_padding"
        android:text="@string/my_nanodegree_apps"
        android:textAppearance="@style/Base.AlertDialog.AppCompat"
        android:textSize="20sp" />

    <Button
        android:id="@+id/popular_movies_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/button_vertical_margin"
        android:background="#070707"
        android:paddingLeft="@dimen/button_padding"
        android:paddingRight="@dimen/button_padding"
        android:text="@string/popular_movies"
        android:textColor="#ffffff"
        android:onClick="onClickPopularMovies"/>

    <Button
        android:id="@+id/stock_hawk_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/button_vertical_margin"
        android:background="#070707"
        android:paddingLeft="@dimen/button_padding"
        android:paddingRight="@dimen/button_padding"
        android:text="@string/stock_hawk"
        android:textColor="#ffffff"
        android:onClick="onClickStockHawk" />

    <Button
        android:id="@+id/build_it_bigger_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/button_vertical_margin"
        android:background="#070707"
        android:paddingLeft="@dimen/button_padding"
        android:paddingRight="@dimen/button_padding"
        android:text="@string/build_it_bigger"
        android:textColor="#ffffff"
        android:onClick="onClickBuildItBigger" />

    <Button
        android:id="@+id/make_your_app_material_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/button_vertical_margin"
        android:background="#070707"
        android:paddingLeft="@dimen/button_padding"
        android:paddingRight="@dimen/button_padding"
        android:text="@string/make_your_app_material"
        android:textColor="#ffffff"

        android:onClick="onClickMakeYourAppMaterial"/>

    <Button
        android:id="@+id/go_ubiquitous"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/button_vertical_margin"
        android:background="#070707"
        android:paddingLeft="@dimen/button_padding"
        android:paddingRight="@dimen/button_padding"
        android:text="@string/go_ubiquitous"
        android:textColor="#ffffff"
        android:onClick="onClickGoUbiquitous"/>

    <Button
        android:id="@+id/capstone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/button_vertical_margin"
        android:background="#070707"
        android:paddingLeft="@dimen/button_padding"
        android:paddingRight="@dimen/button_padding"
        android:text="@string/capstone"
        android:textColor="#ffffff"
        android:onClick="onClickCapstone" />

</LinearLayout>
